# capstone-project

./: .env  .env_example  .gitignore  README.md  compose.yml
backend/: README.md  pyproject.toml
backend/src/: api.py  main.py  routes.py
backend/src/routes/: auth.py  cards.py  fsrs.py  tts.py  users.py
backend/src/services/: card_service.py  fsrs_service.py  tts_service.py
backend/src/services/fsrs/: card.py  optimizer.py  review_log.py  scheduler.py
backend/src/tests/: CARD_IMPLEMENTATION_NOTES.txt  conftest.py  run_all_tests_cov.sh  test_auth_integration.py  test_auth_unit.py  test_builtin_decks_integration.py  test_card_integration.py  test_card_unit.py  test_decks_integration.py  test_dictionary_integration.py  test_dictionary_unit.py  test_fsrs.py  test_fsrs_optimizer.py  test_fsrs_routes_integration.py  test_fsrs_service_unit.py  test_image_routes_integration.py  test_image_service_unit.py  test_translate_unit.py  test_tts_integration.py  test_tts_unit.py  test_user_integration.py
backend/src/tests/sample_data/: generate_large_sample_logs.py  large_sample_logs.csv  sample_logs.csv
database/: create_table.sql
database/init/: 01_create_table.sql  02_seed_builtin_decks.sql  chinese_mando_vocab_beginner.csv  french_vocab_beginner.csv  (+1 more)
frontend/: .env.example  README.md  eslint.config.js  package-lock.json  package.json
meetings/: 2025-09-09.md  2025-09-10.md  2025-09-12.md  2025-09-15.md  2025-09-22.md  2025-09-26.md  2025-10-02.md  2025-10-04.md  2025-10-09.md  2025-10-25.md  2025-11-17.md  2025-11-6.md  2026-02-27.md  2026-04-02.md  2026-04-04.md
(+59 files in other folders)
