[tool.poetry]
name = "languine"
version = "0.1.0"
description = "Backend for Languine App"
authors = [
    "Marwa Khafagy", 
    "Selina Kim", 
    "Giovanna Gerada", 
    "Stella Gu", 
    "Tinu Joseph"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11.0"
flask = "^3.1.2"
pydantic = "^2.12.2"
flask-jwt-extended = "^4.7.1"
flask-limiter = "^4.0.0"
flask-sqlalchemy = "^3.1.1"
requests = "^2.32.5"
deepl = "^1.25.0"
python-dotenv = "^1.2.1"
pandas = "^3.0.1"
tqdm = "^4.67.3"


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-m 'not integration'"
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')"
]

[build-system]
requires = ["poetry-core>=2.2.0"]
build-backend = "poetry.core.masonry.api"
